[gd_scene load_steps=46 format=2]

[ext_resource path="res://Sprites/StartScreen/ButtonSairNormal.png" type="Texture" id=1]
[ext_resource path="res://Sprites/StartScreen/ButtonMultiplayerNormal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Logo.png" type="Texture" id=3]
[ext_resource path="res://Sprites/StartScreen/ButtonMultiplayerClicked.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MainMenuButtons.gd" type="Script" id=5]
[ext_resource path="res://Sprites/StartScreen/ButtonStartClickedl.png" type="Texture" id=6]
[ext_resource path="res://Sprites/StartScreen/ButtonStartNormal.png" type="Texture" id=7]
[ext_resource path="res://Sprites/StartScreen/ButtonSairClickedl.png" type="Texture" id=8]
[ext_resource path="res://Sprites/StartScreen/BGStartScreen.png" type="Texture" id=9]
[ext_resource path="res://Sounds/fire-sound-efftect-21991.mp3" type="AudioStream" id=10]
[ext_resource path="res://Foguin.png" type="Texture" id=11]
[ext_resource path="res://Sounds/RockSlide.wav" type="AudioStream" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="BgStartScreen" type="Sprite" parent="."]
position = Vector2( 511.5, 301 )
scale = Vector2( 2.046, 1.204 )
texture = ExtResource( 9 )

[node name="Fogo" type="AnimatedSprite" parent="."]
position = Vector2( -19, 548 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 14
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Fogo2" type="AnimatedSprite" parent="."]
position = Vector2( 357, 573 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 14
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Fogo3" type="AnimatedSprite" parent="."]
position = Vector2( 748, 539 )
scale = Vector2( 10.1719, 8.875 )
frames = SubResource( 33 )
frame = 14
speed_scale = 7.0
playing = true
offset = Vector2( 17.0077, -5.97184 )

[node name="Start" type="TextureButton" parent="."]
margin_left = 55.0
margin_top = 224.0
margin_right = 335.0
margin_bottom = 299.0
rect_pivot_offset = Vector2( 139, 27 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 7 )

[node name="Multiplayer" type="TextureButton" parent="."]
margin_left = 53.0
margin_top = 303.0
margin_right = 333.0
margin_bottom = 358.0
rect_pivot_offset = Vector2( 139, 27 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 2 )

[node name="End" type="TextureButton" parent="."]
margin_left = 55.0
margin_top = 383.0
margin_right = 335.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( 139, 27 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 1 )
stretch_mode = 1

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 717, 261 )
scale = Vector2( 0.768, 0.773095 )
texture = ExtResource( 3 )

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 392, 351 )
stream = ExtResource( 10 )
volume_db = -2.761
pitch_scale = 0.8
autoplay = true

[node name="ButtonSlide" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 389, 341 )
stream = ExtResource( 12 )

[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Multiplayer" to="." method="_on_Multiplayer_mouse_entered"]
[connection signal="pressed" from="Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="mouse_entered" from="End" to="." method="_on_End_mouse_entered"]
[connection signal="pressed" from="End" to="." method="_on_End_pressed"]
